src/main/bkit/parser/.antlr/BKITParser.py
# Generated from d:\Bach Khoa\201\PPL\_AS2\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'If'", "'Parameter'", 
                     "'Return'", "'Then'", "'Var'", "'While'", "'True'", 
                     "'False'", "'EndDo'", "'+'", "'+.'", "'-'", "'-.'", 
                     "'*'", "'*.'", "'\\'", "'\\.'", "'%'", "'!'", "'&&'", 
                     "'||'", "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", 
                     "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", "'='", "'['", 
                     "']'", "'{'", "'}'", "'('", "')'", "':'", "';'", "'.'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "ID", "INT_LIT", "BOOLEAN_LIT", "FLOAT_LIT", 
                      "BODY", "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", 
                      "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", 
                      "IF", "PARAMETER", "RETURN", "THEN", "VAR", "WHILE", 
                      "TRUE", "FALSE", "ENDDO", "ADDINT", "ADDFLOAT", "SUBINT", 
                      "SUBFLOAT", "MULINT", "MULFLOAT", "DIVINT", "DIVFLOAT", 
                      "MODINT", "NOT", "AND", "OR", "NOT_EQUALINT", "EQUALINT", 
                      "LTHANINT", "GTHANINT", "LEQUALINT", "GEQUALINT", 
                      "NOT_EQUALFLOAT", "LTHANFLOAT", "GTHANFLOAT", "LEQUALFLOAT", 
                      "GEQUALFLOAT", "ASSIGN", "LSB", "RSB", "LB", "RB", 
                      "LP", "RP", "COLON", "SEMI", "DOT", "COMMA", "COMMENT", 
                      "INT", "INT_WITHOUT_0", "WS", "STRING_LIT", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declarations = 1
    RULE_var_decl = 2
    RULE_many_var_decl = 3
    RULE_one_var_decl = 4
    RULE_func_decl = 5
    RULE_func_name = 6
    RULE_para_decl = 7
    RULE_many_para_decl = 8
    RULE_one_para_decl = 9
    RULE_composit = 10
    RULE_scalar = 11
    RULE_array_lit = 12
    RULE_literal = 13
    RULE_array_value = 14
    RULE_stm_list = 15
    RULE_assign_stm = 16
    RULE_if_stm = 17
    RULE_ifthen_stm = 18
    RULE_elif_stm = 19
    RULE_else_stm = 20
    RULE_for_stm = 21
    RULE_while_stm = 22
    RULE_do_while_stm = 23
    RULE_break_stm = 24
    RULE_continue_stm = 25
    RULE_call_stm = 26
    RULE_return_stm = 27
    RULE_exp = 28
    RULE_exp1 = 29
    RULE_exp2 = 30
    RULE_exp3 = 31
    RULE_exp4 = 32
    RULE_exp5 = 33
    RULE_exp6 = 34
    RULE_element_exp = 35
    RULE_index_op = 36
    RULE_func_call = 37
    RULE_list_argument = 38

    ruleNames =  [ "program", "declarations", "var_decl", "many_var_decl", 
                   "one_var_decl", "func_decl", "func_name", "para_decl", 
                   "many_para_decl", "one_para_decl", "composit", "scalar", 
                   "array_lit", "literal", "array_value", "stm_list", "assign_stm", 
                   "if_stm", "ifthen_stm", "elif_stm", "else_stm", "for_stm", 
                   "while_stm", "do_while_stm", "break_stm", "continue_stm", 
                   "call_stm", "return_stm", "exp", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "element_exp", "index_op", "func_call", 
                   "list_argument" ]

    EOF = Token.EOF
    ID=1
    INT_LIT=2
    BOOLEAN_LIT=3
    FLOAT_LIT=4
    BODY=5
    BREAK=6
    CONTINUE=7
    DO=8
    ELSE=9
    ELSEIF=10
    ENDBODY=11
    ENDIF=12
    ENDFOR=13
    ENDWHILE=14
    FOR=15
    FUNCTION=16
    IF=17
    PARAMETER=18
    RETURN=19
    THEN=20
    VAR=21
    WHILE=22
    TRUE=23
    FALSE=24
    ENDDO=25
    ADDINT=26
    ADDFLOAT=27
    SUBINT=28
    SUBFLOAT=29
    MULINT=30
    MULFLOAT=31
    DIVINT=32
    DIVFLOAT=33
    MODINT=34
    NOT=35
    AND=36
    OR=37
    NOT_EQUALINT=38
    EQUALINT=39
    LTHANINT=40
    GTHANINT=41
    LEQUALINT=42
    GEQUALINT=43
    NOT_EQUALFLOAT=44
    LTHANFLOAT=45
    GTHANFLOAT=46
    LEQUALFLOAT=47
    GEQUALFLOAT=48
    ASSIGN=49
    LSB=50
    RSB=51
    LB=52
    RB=53
    LP=54
    RP=55
    COLON=56
    SEMI=57
    DOT=58
    COMMA=59
    COMMENT=60
    INT=61
    INT_WITHOUT_0=62
    WS=63
    STRING_LIT=64
    ILLEGAL_ESCAPE=65
    UNCLOSE_STRING=66
    UNTERMINATED_COMMENT=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(BKITParser.DeclarationsContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.declarations()
            self.state = 79
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_declarations




    def declarations(self):

        localctx = BKITParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 81
                self.var_decl()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 87
                self.func_decl()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def many_var_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_var_declContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_decl




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(BKITParser.VAR)
            self.state = 94
            self.match(BKITParser.COLON)
            self.state = 95
            self.many_var_decl()
            self.state = 96
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_var_decl(self):
            return self.getTypedRuleContext(BKITParser.One_var_declContext,0)


        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def many_var_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_var_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_var_decl




    def many_var_decl(self):

        localctx = BKITParser.Many_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_many_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.one_var_decl()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.COMMA:
                self.state = 99
                self.match(BKITParser.COMMA)
                self.state = 100
                self.many_var_decl()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class One_var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar(self):
            return self.getTypedRuleContext(BKITParser.ScalarContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def composit(self):
            return self.getTypedRuleContext(BKITParser.CompositContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_one_var_decl




    def one_var_decl(self):

        localctx = BKITParser.One_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_one_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 103
                self.scalar()
                pass

            elif la_ == 2:
                self.state = 104
                self.match(BKITParser.ID)
                self.state = 105
                self.composit()
                pass


            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 108
                self.match(BKITParser.ASSIGN)
                self.state = 109
                self.literal()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def func_name(self):
            return self.getTypedRuleContext(BKITParser.Func_nameContext,0)


        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def para_decl(self):
            return self.getTypedRuleContext(BKITParser.Para_declContext,0)


        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def stm_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stm_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stm_listContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(BKITParser.FUNCTION)
            self.state = 113
            self.match(BKITParser.COLON)
            self.state = 114
            self.func_name()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 115
                self.para_decl()


            self.state = 118
            self.match(BKITParser.BODY)
            self.state = 119
            self.match(BKITParser.COLON)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 120
                self.var_decl()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ID) | (1 << BKITParser.BREAK) | (1 << BKITParser.CONTINUE) | (1 << BKITParser.DO) | (1 << BKITParser.FOR) | (1 << BKITParser.IF) | (1 << BKITParser.RETURN) | (1 << BKITParser.WHILE) | (1 << BKITParser.LP))) != 0):
                self.state = 126
                self.stm_list()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(BKITParser.ENDBODY)
            self.state = 133
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_name




    def func_name(self):

        localctx = BKITParser.Func_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def many_para_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_para_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_para_decl




    def para_decl(self):

        localctx = BKITParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(BKITParser.PARAMETER)
            self.state = 138
            self.match(BKITParser.COLON)
            self.state = 139
            self.many_para_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_para_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_para_decl(self):
            return self.getTypedRuleContext(BKITParser.One_para_declContext,0)


        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def many_para_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_para_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_para_decl




    def many_para_decl(self):

        localctx = BKITParser.Many_para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_many_para_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.one_para_decl()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.COMMA:
                self.state = 142
                self.match(BKITParser.COMMA)
                self.state = 143
                self.many_para_decl()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class One_para_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar(self):
            return self.getTypedRuleContext(BKITParser.ScalarContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def composit(self):
            return self.getTypedRuleContext(BKITParser.CompositContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_one_para_decl




    def one_para_decl(self):

        localctx = BKITParser.One_para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_one_para_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 146
                self.scalar()
                pass

            elif la_ == 2:
                self.state = 147
                self.match(BKITParser.ID)
                self.state = 148
                self.composit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompositContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_composit




    def composit(self):

        localctx = BKITParser.CompositContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_composit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 151
                self.match(BKITParser.LSB)
                self.state = 152
                self.match(BKITParser.INT_LIT)
                self.state = 153
                self.match(BKITParser.RSB)
                self.state = 156 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LSB):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScalarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_scalar




    def scalar(self):

        localctx = BKITParser.ScalarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_scalar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_litContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def array_value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Array_valueContext)
            else:
                return self.getTypedRuleContext(BKITParser.Array_valueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_array_lit




    def array_lit(self):

        localctx = BKITParser.Array_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_array_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(BKITParser.LB)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 2)) & ~0x3f) == 0 and ((1 << (_la - 2)) & ((1 << (BKITParser.INT_LIT - 2)) | (1 << (BKITParser.BOOLEAN_LIT - 2)) | (1 << (BKITParser.FLOAT_LIT - 2)) | (1 << (BKITParser.LB - 2)) | (1 << (BKITParser.STRING_LIT - 2)))) != 0):
                self.state = 161
                self.array_value()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 162
                    self.match(BKITParser.COMMA)
                    self.state = 163
                    self.array_value()
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 171
            self.match(BKITParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)

        def BOOLEAN_LIT(self):
            return self.getToken(BKITParser.BOOLEAN_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(BKITParser.STRING_LIT, 0)

        def array_lit(self):
            return self.getTypedRuleContext(BKITParser.Array_litContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_literal)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INT_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.match(BKITParser.INT_LIT)
                pass
            elif token in [BKITParser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(BKITParser.FLOAT_LIT)
                pass
            elif token in [BKITParser.BOOLEAN_LIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 175
                self.match(BKITParser.BOOLEAN_LIT)
                pass
            elif token in [BKITParser.STRING_LIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 176
                self.match(BKITParser.STRING_LIT)
                pass
            elif token in [BKITParser.LB]:
                self.enterOuterAlt(localctx, 5)
                self.state = 177
                self.array_lit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)
